k8s/sxp/10.3/ltsc2019/xm1/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sitecore-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "32k"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
spec:
  ingressClassName: "nginx"
  rules:
  - host: cd-placeholder-hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cd
            port: 
              number: 80
  - host: cm-placeholder-hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cm
            port: 
              number: 80
  - host: id-placeholder-hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: id
            port: 
              number: 80
  tls:
  - secretName: global-cd-tls
    hosts:
    - cd-placeholder-hostname
  - secretName: global-cm-tls
    hosts:
    - cm-placeholder-hostname
  - secretName: global-id-tls
    hosts:
    - id-placeholder-hostname
